2002-03-18  Kral Ferch <kral_ferch@hotmail.com>

	* XmlNamespaceManager.cs: Implemented LookupPrefix.
	
	* XmlTextWriter.cs: Implemented namespace and prefix support.

2002-03-18  Kral Ferch <kral_ferch@hotmail.com>

	* XmlTextReader.cs: Restores properties after
	reading last attribute on an element.
	
	* XmlNode.cs: AppendChild sets the parent
	on the child.

2002-03-17  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlCDataSection.cs: Formatting, Implementation for WriteTo.

	* XmlComment.cs: Implementations for WriteTo and WriteContentTo.
	
	* XmlElement.cs: Fixed bug in WriteTo.
	
	* XmlProcessingInstruction.cs: Formatting.
	
	* XmlTextWriter.cs: Implementations for Close, WriteCData, WriteComment,
	fixes for WriteEndElement, WriteProcessingInstruction.

2002-03-17  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlDocument.cs: Implementations for WriteTo() and WriteContentTo(),
	had Load() add PIs to the document, moved onXXX methods to alphabetical
	order in the file.
	
	* XmlElement.cs: Implementations for WriteTo() and WriteContentTo().
	
	* XmlNode.cs: Implementations for InnerXml Get and OuterXml.
	
	* XmlProcessingInstruction.cs: Implementations for WriteTo() and
	WriteContentTo().
	
	* XmlTextWriter.cs: Implementations for WriteEndElement,
	WriteProcessingInstruction, WriteStartElement, and WriteString.
	
	* XmlWriter.cs: Implemented WriteStartElement() methods.

2002-03-15  Duncan Mak  <duncan@ximian.com>

	* XmlEntity.cs: Added to CVS. Need to implement BaseURI and
	InnerText once I know what they do.

	* XmlDocumentType.cs (XmlDocumentType): Fix the constructor now
	that we can properly chain constructors.
	(CloneNode): implemented.
	(WriteContentTo): Removed MonoTODO attribute as this method has no
	effect in this class.

	* XmlProcessingInstruction.cs (Value): Added the missing Set
	block.
	(InnerText): Added in, but not implemented.

2002-03-14  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlTextWriter.cs: implemented constructors and 